deep dive in javascript topics

--- a/JavaScript Fundamentals/index.html
+++ b/JavaScript Fundamentals/index.html
@@ -11,7 +11,91 @@
 //     alert(hello)
 //  alert(message)
 
- alert( 1 / 0 );
- alert( "not a number" / 2 );
+//  alert( 1 / 0 );
+//  alert( "not a number" / 2 );
+
+
+// let name = "john";
+// alert( `Hello ,  ${name}!`);
+
+// let age = prompt('whats your age',22);
+// alert(` Your age is ${age} years old `);
+
+// let age = prompt("whats your age ",'')
+
+// if (age == 22){
+//     alert("You are right");
+//     alert("you are so smart")
+// }else{
+//     alert("your age is 20")
+// }
+
+
+// let age = prompt("whats your age ", 18);
+
+// let message = (age == 18) ? "your are adult now " : 
+// (age<18) ? "you are a child" :
+// (age>18) ? "you are an adult ":
+// "we dont know what to say   " ;     
+
+// alert(message); 
+
+
+// let a = 4;
+// while (a>1){
+// alert(a);
+// a--;
+// }   
+
+
+
+//// Skipping parts
+
+// let i = 0;
+// for(; i<3 ;i++){
+//     alert(i)
+// }
+
+
+////Labels for break/continue
+
+
+// outer: for (let i = 0; i < 3; i++) {
+
+// for (let j = 0; j < 3; j++) {
+
+//   let input = prompt(`Value at coords (${i},${j})`, '');
+
+//   if (!input) break outer; // (*)
+
+// }
+// }
+
+// alert('Done!');
+
+
+
+
+////   Switch case
+
+
+// let a = 2+24;
+// switch(a){
+//     case 3:
+//         alert('too small')
+//         break;
+//     case 4:
+//         alert('same numner')
+//         break;
+//     default:
+//         alert("out of box")
+//         break;
+// }
+
+
+let sum = n => 2 * n ;
+alert(sum(5));
+
+
     </script>
 
